src/objects/Partner_Location__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Locations</relationshipLabel>
        <relationshipName>Partner_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentUserProfile__c</fullName>
        <formula>$Profile.Name</formula>
        <label>CurrentUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVM_Partner_Location_Id__c</fullName>
        <externalId>true</externalId>
        <label>EVM Partner Location Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <formula>Account__r.Name &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Keyword</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Publish_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this location will be published in the Zebra partner locator.</inlineHelpText>
        <label>Publish Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Buenos Aires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Córdoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buenos Aires City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chubut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catamarca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entre Ríos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jujuy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Pampa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Rioja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misiones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mendoza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuquén</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Río Negro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santa Cruz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santiago del Estero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santa Fe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Juan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Luis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tierra del Fuego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tucumán</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address3__c</fullName>
        <label>Street Address3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL -{00000}</displayFormat>
        <label>Partner Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Locations</pluralLabel>
    <recordTypes>
        <fullName>Partner_Admin</fullName>
        <active>false</active>
        <label>Partner Admin</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PC_Update_Primary_Business_Address</fullName>
        <active>true</active>
        <description>To restrict the Partner Admins from updating the primary business address</description>
        <errorConditionFormula>OR (
( $Profile.Name = &apos;Partner Admin&apos; ||  $Profile.Name = &apos;Partner Admin Community Login&apos; )&amp;&amp; INCLUDES(Location_Type__c,&apos;Primary Location&apos;) &amp;&amp; NOT(OR( ISCHANGED( Location_Type__c ),ISCHANGED(Publish_Flag__c), ISCHANGED(Mobile_Phone__c),ISCHANGED(Phone__c),ISCHANGED(Fax__c))),
(( $Profile.Name = &apos;Partner Admin&apos; ||  $Profile.Name = &apos;Partner Admin Community Login&apos; )&amp;&amp; INCLUDES(Location_Type__c,&apos;Primary Location&apos;)&amp;&amp;ISNEW())
)</errorConditionFormula>
        <errorMessage>Please create a case for updating the primary location</errorMessage>
    </validationRules>
</CustomObject>